--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hyperf-ext/encryption",
+    "name": "he426100/hyperf-encryption",
     "type": "library",
     "license": "MIT",
     "keywords": [
